maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:6: error: ';' expected but 'else' found.
    else if (estFaceMur() && keepHandOnSideWall() && !estSurBiscuit()) {droite()}
    ^